app/javascript/layouts/HeaderSidebarLayout.scss
.page-header {
  background-size: cover;
  background-position: center;
  padding: var(--bloom-s6) 0;

  @media (min-width: $screen-md) {
    padding: var(--bloom-s12);
  }

  .page-header__group {
    padding-left: 0;

    @media (max-width: $screen-md) {
      width: full;
      align-items: center;
    }

    .page-header__title {
      font-size: var(--bloom-font-size-3xl);
      text-align: start !important;
      word-break: normal;
      padding-bottom: var(--bloom-s4);

      @media (max-width: $screen-md) {
        text-align: center !important;
        @apply w-2/3;
      }
    }

    .page-header__lead {
      text-align: start !important;
      word-break: normal;
      font-size: var(--bloom-font-size-lg);

      @media (max-width: $screen-md) {
        font-size: var(--bloom-font-size-sm);
        text-align: center !important;
        @apply w-2/3;
      }
    }
  }
}

